--- a/react/egghead/start-learning-react/react-app/public/index.html
+++ b/react/egghead/start-learning-react/react-app/public/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lnag="en">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>React App</title>
+  <link rel="stylesheet" href="./app.css" />
 </head>
 <body>
   <div id="root"></div>
